<resources>
    <string name="app_name">VOTA Portugal</string>
    <string name="title_home">Home</string>
    <string name="title_presidenciais">Presidenciais</string>
    <string name="title_legislativas">Legislativas</string>
    <string name="title_europeias">Europeias</string>
    <string name="title_autarquicas">Autarquicas</string>
    <string name="title_regionais">Regionais</string>
    <string name="EleicaoPresidencialData">24 Janeiro 2016</string>
    <string name="EleicaoPresidencialLocal">Local de votação</string>


</resources>
